# flutter-ai-flashcards-zeno-mobile

./: .firebaserc  .gitignore  README.md  firestore.rules
.github/workflows/: ci.yml
app/: README.md  analysis_options.yaml  firebase.json  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/lib/: app.dart  main.dart
app/lib/core/error/: app_failure.dart
app/lib/core/firebase/: firebase_init.dart
app/lib/core/logger/: app_logger.dart
app/lib/core/routing/: app_router.dart
app/lib/core/theme/: app_colors.dart  app_theme.dart  app_typography.dart
app/lib/core/widgets/: empty_state.dart  loading_skeleton.dart  main_scaffold.dart
app/lib/features/ai/data/: ai_api_client.dart
app/lib/features/ai/domain/: generated_card_draft.dart
app/test/: widget_test.dart
app/test/core/error/: app_failure_test.dart
app/test/core/routing/: app_router_test.dart
app/test/core/theme/: app_theme_test.dart
app/test/core/widgets/: empty_state_test.dart  loading_skeleton_test.dart
app/web/: index.html  manifest.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: generate.py
backend/app/schemas/: cards.py
backend/app/services/: llm.py  parser.py
backend/tests/: test_generate.py  test_health.py  test_llm.py
docs/plans/: 2026-05-08-v1.0-foundation-and-auth.md  2026-05-12-v1.1-backend-ai-ingest.md
docs/specs/: 2026-05-08-ai-learning-companion-design.md
scripts/: check-env.ps1  fix-build.ps1
(+55 files in other folders)
